--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": " server.js",
   "scripts": {
     "start": "node server",
-    "server": "nodemon server"
+    "server": "nodemon server",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "KFIFAT Abir",
   "license": "ISC",
@@ -17,6 +19,7 @@
     "gravatar": "^1.8.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.13",
+    "react-router-dom": "^5.2.0",
     "request": "^2.88.2"
   },
   "devDependencies": {
