--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,12 @@
     "react-dom": "^17.0.2",
     "react-moment": "^1.1.1",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.0",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -42,5 +43,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }, "proxy": "http://localhost:5000"
+  },
+  "proxy": "http://localhost:5000"
 }
